2001-08-16  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble): if a form is not a lambda form,
	prepend lambda before coercing to function

2001-08-15  Sam Steingold  <sds@gnu.org>

	* utils/gcc-cccp/Makefile.* (clean): new target
	* utils/gcc-cccp/Makefile (clean): new target
	adapted for CYGWIN/MINGW compilation
	* utils/gcc-cccp/cccp.c: made compilable under CYGWIN/MINGW:
	(stdlib.h, string.h, errno.h): include
	(max): define only if not yet defined
	(sys_nerr, sys_errlist): do not use on CYGWIN/MINGW, use strerror()
	code clean-up: added prototypes, fixed warnings and...
	(fancy_abort): removed (unused)
	(pipe_closed): ifndef _WIN32
	(fancy_abort): turned into a macro
	(grow_outbuf): void
	(expand_to_temp_buffer): do not return a local var
	fixed a show-stopper bug:
	(rescan): `obufp_before_macroname' is on the top level now
	(RECACHE): update `obufp_before_macroname'

2001-08-15  Sam Steingold  <sds@gnu.org>

	MT-safety: remove a static variable
	* io.d (circle_p): return a boolean and take a circle_info_t* arg
	(pr_circle): info is not a pointer now; pass it to circle_p()
	(pr_cons): pass NULL to circle_p()

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* sequence.d (seq_check_index): Remove typdescr argument. Use index,
	not STACK_0. Fix fehler_index_range argument. Add documentation.
	(ELT): Update.
	(SYSTEM::%SETELT): Update.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* pathname.d (legal_namechar): Treat ' ' as valid and '"' as invalid.

2001-08-14  Sam Steingold  <sds@gnu.org>

	fixed bug #448817
	* io.d (pr_external_1): use new macro BIND_UNLESS
	(pr_sharp_dot): new local function
	(pr_instance): use it
	do not call pr_external_[12] around a call to prin_object()
	(pr_orecord): use pr_sharp_dot() when printing Rectype_Loadtimeeval

2001-08-14  Sam Steingold  <sds@gnu.org>

	* .gdbinit: set args and define zout

2001-08-05  Bruno Haible  <haible@clisp.cons.org>
